[tool.poetry]
name = "ackack"
version = "0.1.0"
description = ""
authors = ["David Francos <opensource@davidfrancos.net>"]
readme = 'Readme.rst'


[tool.poetry.dependencies]
python = "^3.9"
weback-unofficial = "^0.3.5"
requests = "^2.27.1"
boto3 = "^1.20.31"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
